fixed issue with overflow in windows

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -65,6 +65,13 @@ html,
 body {
 	position: relative;
 	height: 100%;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+	display: none;
 }
 
 html {
