--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -104,8 +104,8 @@
 			z-index: 1;
 			position: relative;
 			padding-left: 10%;
-			padding-top: 10%;
-			grid-row: 1 / 7;
+			// padding-top: 10vmin;
+			grid-row: 1 / 8;
 			grid-column: 6 / 9;
 		}
 	}
@@ -248,9 +248,10 @@
 		&--3 {
 			@media only screen and (min-width: $bp-smallest) {
 				grid-template-columns: auto;
-				align-items: center;
+				// align-items: center;
+				align-self: end;
 				margin-left: 4rem;
-				grid-row: 3 / 8;
+				grid-row: 1 / 8;
 				grid-column: 7 / 9;
 				.projects__item-screen {
 					max-width: 40rem;
@@ -355,6 +356,11 @@
 			right: 0;
 			grid-row: 3 / 6;
 			grid-column: 1 / span 4;
+
+			svg {
+				// width: 60vmax;
+				height: 38vmin;
+			}
 		}
 		@media only screen and (max-width: $bp-smallest) {
 			position: absolute;
@@ -373,7 +379,8 @@
 		@media only screen and (min-width: $bp-smallest) {
 			text-align: left;
 			max-width: 24rem;
-			grid-row: 2 / 2;
+			align-self: start;
+			grid-row: 1 / 2;
 			grid-column: 1 / span 2;
 			margin: 0;
 			// display: none;
@@ -481,7 +488,7 @@
 
 			@media only screen and (min-width: $bp-smallest) {
 				white-space: nowrap;
-				grid-row: 7 / 7;
+				grid-row: 8 / 8;
 			}
 		}
 		&--icon {
@@ -516,7 +523,7 @@
 		@media only screen and (min-width: $bp-smallest) {
 			position: relative;
 			transform: none;
-			grid-row: 1 / span 7;
+			grid-row: 1 / 9;
 		}
 
 		svg {
@@ -531,27 +538,34 @@
 
 .contact {
 	.section-title {
+		// grid-column: 1 / span 3;
+		grid-row: 1 / 6;
 		grid-column: 1 / span 3;
+		overflow: hidden;
 		align-self: start;
 
 		svg {
 			@media only screen and (min-width: $bp-smallest) {
-				width: 80%;
+				width: 68vmin;
+				height: 50vmin;
 			}
 		}
 	}
 
 	.heading {
-		grid-row: 6 / 6;
+		grid-row: 6 / 8;
 		grid-column: 1 / span 3;
 		justify-self: start;
+		align-self: center;
 	}
 
 	&__listing {
-		grid-row: 7 / 7;
+		grid-row: 8 / 9;
 		grid-column: 1 / 3;
 		display: grid;
+		align-self: end;
 		justify-items: start;
+		align-items: end;
 		white-space: nowrap;
 	}
 
