--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -61,10 +61,11 @@ section {
 	// grid-gap: 2.3rem;
 	// padding: 1.5rem;
 	margin: auto 0;
-	grid-gap: 2.4rem;
-	padding: 2.4rem;
+	grid-gap: 3vmin;
+	padding: 3vmin;
 
 	@media only screen and (min-width: $bp-smallest) {
-		grid-template: repeat(7, 5vw) / repeat(8, 1fr);
+		// grid-template: repeat(7, 5vw) / repeat(8, 1fr);
+		grid-template: repeat(8, 7vmin) / repeat(8, 1fr);
 	}
 }
